# processor-emulator

./: CMakeLists.txt  LICENSE  README.md
include/: instructions.h  processor.h
lib/cpu6502/include/: instructions.h  processor.h
lib/cpu6502/src/: instructions.cpp  processor.cpp
lib/cpu6510/include/: characters.h  instructions.h  memory.h  processor.h  programs.h  vic2.h
lib/cpu6510/src/: instructions.cpp  memory.cpp  processor.cpp  vic2.cpp
src/: instructions.cpp  main.cpp  processor.cpp
test/: test.cc
